upgrade Java version and deps, remove preview-features flag