@@ -42,14 +42,14 @@
     <dependency>
       <groupId>org.junit</groupId>
       <artifactId>junit-bom</artifactId>
-      <version>5.9.3</version>
+      <version>5.10.2</version>
       <scope>test</scope>
       <type>pom</type>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>5.9.3</version>
+      <version>5.10.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -64,7 +64,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>3.3.0</version>
+        <version>3.3.1</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -77,11 +77,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.5.0</version>
+        <version>3.6.3</version>
         <configuration>
-          <source>19</source>
-          <target>19</target>
-          <additionalOptions>--enable-preview</additionalOptions>
+          <source>21</source>
+          <target>21</target>
         </configuration>
         <executions>
           <execution>
@@ -94,20 +93,16 @@
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.13.0</version>
         <configuration>
-          <source>19</source>
-          <target>19</target>
-          <compilerArgs>--enable-preview</compilerArgs>
+          <source>21</source>
+          <target>21</target>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.1.0</version>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-        </configuration>
+        <version>3.2.5</version>
       </plugin>
     </plugins>
   </build>
@@ -121,7 +116,7 @@
             <plugin>
               <groupId>org.simplify4u.plugins</groupId>
               <artifactId>sign-maven-plugin</artifactId>
-              <version>1.0.1</version>
+              <version>1.1.0</version>
               <executions>
                 <execution>
                   <goals>
